// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`dbContent PostgreSQL providers generates template for Neon 1`] = `
"import { neon } from '@neondatabase/serverless';
import { drizzle } from 'drizzle-orm/neon-http';
import * as schema from './schema';


const sql = neon(process.env.DRIZZLE_DATABASE_URL!);
export const db = drizzle(sql,{schema});"
`;

exports[`dbContent PostgreSQL providers generates template for Xata 1`] = `
"import { drizzle } from 'drizzle-orm/xata-http';
import { getXataClient } from './xata'; // Generated client
const xata = getXataClient();
export const db = drizzle(xata);"
`;

exports[`dbContent PostgreSQL providers generates template for PostgresJS 1`] = `
"import { drizzle } from 'drizzle-orm/postgres-js';
import postgres from 'postgres';


const queryClient = postgres(process.env.DATABASE_TOKEN);
export const db = drizzle(queryClient);"
`;

exports[`dbContent PostgreSQL providers generates template for node-postgres 1`] = `
"import { drizzle } from "drizzle-orm/node-postgres";
import { Client } from "pg";
const client = new Client({
  connectionString: process.env.DATABASE_URL,
});

await client.connect();
export const db = drizzle(client);"
`;

exports[`dbContent PostgreSQL providers generates template for Cloudflare 1`] = `
"import { Client } from "pg";
import { drizzle } from "drizzle-orm/node-postgres";

export default {
  async fetch(
    request: Request,
    env: Env,
    ctx: ExecutionContext
  ): Promise<Response> {
    const client = new Client({ connectionString: env.DATABASE_URL });
    await client.connect();
    const db = drizzle(client);
    const result = await db.select().from(/* your_table */);

    // Clean up the client, ensuring we don't kill the worker before that is completed.
    ctx.waitUntil(client.end());
    return Response.json(result);
  }
}"
`;

exports[`dbContent PostgreSQL providers generates template for PGlite 1`] = `
"import { PGlite } from '@electric-sql/pglite';
import { drizzle } from 'drizzle-orm/pglite';

// In-memory Postgres
const client = new PGlite();
export const db = drizzle(client);
"
`;

exports[`dbContent PostgreSQL providers generates template for Vercel Postgres 1`] = `
"import { sql } from '@vercel/postgres';
import { drizzle } from 'drizzle-orm/vercel-postgres';

export const db = drizzle(sql)"
`;

exports[`dbContent PostgreSQL providers generates template for Supabase 1`] = `
"import { drizzle } from 'drizzle-orm/postgres-js'
import postgres from 'postgres'

const connectionString = process.env.DATABASE_URL

const client = postgres(connectionString)
export const db = drizzle(client);
"
`;

exports[`dbContent PostgreSQL providers generates template for AWS Data API 1`] = `
"import { drizzle } from 'drizzle-orm/aws-data-api/pg';
import { RDSDataClient } from '@aws-sdk/client-rds-data';
import { fromIni } from '@aws-sdk/credential-providers';

const rdsClient = new RDSDataClient({
    credentials: fromIni({ profile: process.env['PROFILE'] }),
    region: 'us-east-1',
});

export const db = drizzle(rdsClient, {
  database: process.env['DATABASE']!,
  secretArn: process.env['SECRET_ARN']!,
  resourceArn: process.env['RESOURCE_ARN']!,
});
"
`;

exports[`dbContent PostgreSQL providers generates template for HTTP Proxy 1`] = `
"import { drizzle } from 'drizzle-orm/pg-proxy';

const db = drizzle(async (sql, params, method) => {
  try {
    const rows = await axios.post('http://localhost:3000/query', { sql, params, method });

    return { rows: rows.data };
  } catch (e: any) {
    console.error('Error from pg proxy server: ', e.response.data)
    return { rows: [] };
  }
});"
`;

exports[`dbContent MySQL providers generates template for planetScale 1`] = `
"import { drizzle } from "drizzle-orm/planetscale-serverless";
import { Client } from "@planetscale/database";

const client = new Client({
  host: process.env["DATABASE_HOST"],
  username: process.env["DATABASE_USERNAME"],
  password: process.env["DATABASE_PASSWORD"],
});

export const db = drizzle(client);"
`;

exports[`dbContent MySQL providers generates template for Mysql2 1`] = `
"import { drizzle } from "drizzle-orm/mysql2";
import mysql from "mysql2/promise";

const connection = await mysql.createConnection({
  host: "host",
  user: "user",
  database: "database",
  ...
});

export const db = drizzle(connection);"
`;

exports[`dbContent MySQL providers generates template for HTTP Proxy 1`] = `
"import { drizzle } from 'drizzle-orm/mysql-proxy';

export const db = drizzle(async (sql, params, method) => {
  try {
    const rows = await axios.post('http://localhost:3000/query', { sql, params, method });

    return { rows: rows.data };
  } catch (e: any) {
    console.error('Error from mysql proxy server: ', e.response.data)
    return { rows: [] };
  }
});"
`;

exports[`dbContent MySQL providers generates template for TiDB Serverless 1`] = `
"import { connect } from '@tidbcloud/serverless';
import { drizzle } from 'drizzle-orm/tidb-serverless';

const client = connect({ url: '...' });
export const db = drizzle(client);"
`;

exports[`dbContent SQLite providers generates template for Turso 1`] = `
"import { drizzle } from 'drizzle-orm/libsql';
import { createClient } from '@libsql/client';

const client = createClient({ url: 'DATABASE_URL', authToken: 'DATABASE_AUTH_TOKEN' });

export const db = drizzle(client);
"
`;

exports[`dbContent SQLite providers generates template for Cloudflare D1 1`] = `
"import { drizzle } from 'drizzle-orm/d1';

export interface Env {
  <BINDING_NAME>: D1Database;
}

export default {
  async fetch(request: Request, env: Env) {
    const db = drizzle(env.<BINDING_NAME>);
    const result = await db.select().from(users).all()
    return Response.json(result);
  },
};"
`;

exports[`dbContent SQLite providers generates template for Bun sqlite 1`] = `
"import { drizzle } from 'drizzle-orm/bun-sqlite';
import { Database } from 'bun:sqlite';

const sqlite = new Database('sqlite.db');
export const db = drizzle(sqlite);
"
`;

exports[`dbContent SQLite providers generates template for React Native SQLite 1`] = `
"import { drizzle } from "drizzle-orm/expo-sqlite";
import { openDatabaseSync } from "expo-sqlite/next";
const expo = openDatabaseSync("db.db");
export const db = drizzle(expo);"
`;

exports[`dbContent SQLite providers generates template for Expo SQLite 1`] = `
"import { drizzle } from "drizzle-orm/expo-sqlite";
import { openDatabaseSync } from "expo-sqlite/next";
const expo = openDatabaseSync("db.db");
export const db = drizzle(expo);"
`;

exports[`dbContent SQLite providers generates template for better-sqlite3 1`] = `
"import { drizzle } from 'drizzle-orm/better-sqlite3';
import Database from 'better-sqlite3';
const sqlite = new Database('sqlite.db');
export const db = drizzle(sqlite);"
`;

exports[`dbContent SQLite providers generates template for HTTP Proxy 1`] = `
"import { drizzle } from 'drizzle-orm/sqlite-proxy';

export const db = drizzle(async (sql, params, method) => {
  try {
    const rows = await axios.post('http://localhost:3000/query', { sql, params, method });

    return { rows: rows.data };
  } catch (e: any) {
    console.error('Error from sqlite proxy server: ', e.response.data)
    return { rows: [] };
  }
});"
`;
